tests/ui/test-attrs/issue-12997-2.stderr
error[E0308]: mismatched types
  --> $DIR/issue-12997-2.rs:8:1
   |
LL | #[bench]
   | -------- in this attribute macro expansion
LL | fn bar(x: isize) { }
   | ^^^^^^^^^^^^^^^^^^^^
   | |
   | expected `isize`, found `&mut Bencher`
   | arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/issue-12997-2.rs:8:4
   |
LL | fn bar(x: isize) { }
   |    ^^^ --------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
